Fix missing .bib references

--- a/references.bib
+++ b/references.bib
@@ -1963,3 +1963,73 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wolters Kluwer Health}
 }
 
+@article{hamelijnck2019multi,
+  title={Multi-resolution multi-task Gaussian processes},
+  author={Hamelijnck, O and Damoulas, T and Wang, K and Girolami, MA},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@article{kelsall2002modeling,
+  title={Modeling spatial variation in disease risk: a geostatistical approach},
+  author={Kelsall, Julia and Wakefield, Jonathan},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={459},
+  pages={692--701},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{law2018variational,
+  title={Variational learning on aggregate outputs with Gaussian processes},
+  author={Law, Ho Chung and Sejdinovic, Dino and Cameron, Ewan and Lucas, Tim and Flaxman, Seth and Battle, Katherine and Fukumizu, Kenji},
+  journal={Advances in Neural Information Processing Systems},
+  volume={31},
+  year={2018}
+}
+
+@inproceedings{tanaka2019spatially,
+  title={{Spatially aggregated Gaussian processes with multivariate areal outputs}},
+  author={Tanaka, Yusuke and Tanaka, Toshiyuki and Iwata, Tomoharu and Kurashima, Takeshi and Okawa, Maya and Akagi, Yasunori and Toda, Hiroyuki},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3005--3015},
+  year={2019}
+}
+
+@article{teh2021efficient,
+  title={Efficient Bayesian Inference of Instantaneous Re-production Numbers at Fine Spatial Scales, with an Application to Mapping and Nowcasting the Covid-19 Epidemic in British Local Authorities},
+  author={Teh, Yee Whye and Bhoopchand, Avishkar and Diggle, Peter and Elesedy, Bryn and He, Bobby and Hutchinson, Michael and Paquet, Ulrich and Read, Jonathan and Tomasev, Nenad and Zaidi, Sheheryar},
+  journal={URL https://rss. org. uk/RSS/media/File-library/News/2021/WhyeBhoopchand. pdfhttps://localcovid. info/2},
+  year={2021}
+}
+
+@article{utazi2019spatial,
+  title={A spatial regression model for the disaggregation of areal unit based data to high-resolution grids with application to vaccination coverage mapping},
+  author={Utazi, C Edson and Thorley, Julia and Alegana, VA and Ferrari, MJ and Nilsen, Kristine and Takahashi, Saki and Metcalf, CJE and Lessler, Justin and Tatem, AJ},
+  journal={Statistical Methods in Medical Research},
+  volume={28},
+  number={10-11},
+  pages={3226--3241},
+  year={2019},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{wakefield1999spatial,
+  title={Spatial dependence and errors-in-variables in environmental epidemiology},
+  author={Wakefield, J and Morris, S},
+  journal={Bayesian statistics},
+  volume={6},
+  pages={657--684},
+  year={1999},
+  publisher={Clarendon Press Oxford}
+}
+
+@article{yousefi2019multi,
+  title={Multi-task learning for aggregated data using Gaussian processes},
+  author={Yousefi, Fariba and Smith, Michael T and Alvarez, Mauricio},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
